--- a/server/utils/scraperConfig.json
+++ b/server/utils/scraperConfig.json
@@ -9,15 +9,15 @@
       },
       "website": "amazon"
     },
-    "flipkart": {
-      "url": "https://www.flipkart.com/search?q={query}",
-      "selectors": {
-        "product": ".DOjaWF.gdgoEp",
-        "title": ".KzDlHZ",  
-        "price": ".col-5-12 .BfVC2z",
-        "link": "a.aCGtC98"
-      },
-      "website": "flipkart"
-    }
-  }
-  
+    "ebay": {
+  "url": "https://www.ebay.com/sch/i.html?_nkw={query}",
+  "selectors": {
+    "product": ".s-item", 
+    "title": ".s-item__title",  
+    "price": ".s-item__price",  
+    "link": ".s-item__link"    
+  },
+  "website": "ebay"
+}
+
+}
