--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
     "nodemon": "^3.1.7",
-    "playwright": "^1.48.2"
+    "playwright": "^1.48.2",
+    "redis": "^4.7.0"
   }
 }
