--- a/server/utils/hardwareScraperConfig.json
+++ b/server/utils/hardwareScraperConfig.json
@@ -5,7 +5,8 @@
             "product": ".products-list.row.nopadding-xs",
             "title": "h4",
             "link": "h4 a",
-            "price": ".price-new"
+            "price": ".price-new",
+            "rating": ".rating-box"
         },
         "website": "mdcomputers"
     },
@@ -15,7 +16,8 @@
             "product": ".col.large-12",
             "title": ".woocommerce-LoopProduct-link.woocommerce-loop-product__link",
             "link": "a.woocommerce-LoopProduct-link.woocommerce-loop-product__link",
-            "price": ".woocommerce-Price-currencySymbol"
+            "price": ".woocommerce-Price-currencySymbol",
+            "rating": ".star-rating.star-rating--inline"
         },
         "website": "e2zstore"
     },
@@ -35,10 +37,14 @@
       "product": ".main-products.product-grid",
       "title": ".name a",
       "link": "a",
-      "price": ".price-new"
+      "price": ".price-new",
+      "rating": ".rating-stars"
+
     },
     "website": "vedantcomputers"
-  },"gamenation": {
+  },
+  
+  "gamenation": {
     "url": "https://gamenation.in/Search?term={query}",
     "selectors": {
       "product": ".product-listing-box",
@@ -47,8 +53,10 @@
       "price": ".product-price--display"
     },
     "website": "gamenation"
-  },"computechstore": {
-    "url": "https://computechstore.in/?s={query}&post_type=product&dgwt_wcas=1",
+  },
+  
+  "computechstore": {
+    "url": "https://co-mputechstore.in/?s={query}&post_type=product&dgwt_wcas=1",
     "selectors": {
       "product": ".nasa-products-page-wrap.large-9.medium-12.columns.right.has-sidebar",
       "title": ".name.woocommerce-loop-product__title.nasa-show-one-line",
@@ -83,6 +91,7 @@
       "product": ".product-grid-container",
       "title": ".full-unstyled-link",
       "price": ".price-item.price-item--regular",
+      "rating": ".alireviews-review-star-rating",
       "link": "a"
     },
     "website": "tpstech"
